<resources>
    <string name="app_name">MVVM WanAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="begin">beginSearch</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">账户</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_bottom_main">MainActivity</string>
    <string name="menu_account">登录</string>
    <string name="news_item">sous</string>
    <string name="wanandroid">玩安卓</string>
    <string name="blank">"  "</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="inputPassword">请输入密码</string>
    <string name="correctPassword">请确认密码</string>
    <string name="inputAccount">请输入账号</string>
    <string name="loading">加载中。。。</string>
    <string name="first_home">首页</string>
    <string name="withbegin">开始</string>
    <string name="logout">退出</string>
    <string name="mine">我的</string>
    <string name="nickname">昵称</string>
    <string name="coin">积分</string>
    <string name="rank">排行</string>
    <string name="empty">空</string>
    <string name="usercode">用户号</string>
    <string name="level">等级</string>
    <string name="collect">收藏</string>
    <string name="qa">问答</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="tools">工具</string>
    <string name="project">项目</string>
    <string name="contdetail">积分详情</string>
    <string name="title_activity_coin_detail">CoinDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="myCollect">我的收藏</string>
    <string name="square">广场</string>
    <string name="officialAccount">公众号</string>
    <string name="history">历史</string>

</resources>