<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/collect"
            android:title="@string/collect" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/mine"
            android:icon="@drawable/mine"
            android:title="@string/mine" />
        <item
            android:id="@+id/officialAccount"
            android:icon="@drawable/official_account"
            android:title="@string/officialAccount" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history" />
    </group>
</menu>